--- a/DigiChamps/Views/School/AddSchoolMessage.cshtml
+++ b/DigiChamps/Views/School/AddSchoolMessage.cshtml
@@ -170,18 +170,18 @@
                 $("#sectionDropDownValidation").html("Please Select Section.");
                 return false;
             }
-            var imgVal = $('#studymaterial').val();
-            if (imgVal == '') {
-                if (!$("#uploadedFile").val() && $("#MessageId").val() != "00000000-0000-0000-0000-000000000000") {
+            //var imgVal = $('#studymaterial').val();
+            //if (imgVal == '') {
+            //    if (!$("#uploadedFile").val() && $("#MessageId").val() != "00000000-0000-0000-0000-000000000000") {
 
-                }
-                else {
-                    $("#fileUploadValidation").show();
-                    $("#fileUploadValidation").html("Please Select file.");
-                    return false;
-                }
+            //    }
+            //    else {
+            //        $("#fileUploadValidation").show();
+            //        $("#fileUploadValidation").html("Please Select file.");
+            //        return false;
+            //    }
 
-            }
+            //}
         });
 
         if ($("#SectionId").val())
