--- a/DigiChamps/Views/School/GetMessageList.cshtml
+++ b/DigiChamps/Views/School/GetMessageList.cshtml
@@ -50,7 +50,8 @@
                                 <tr>
                                     <th>S No.</th>
                                     <th> Class  </th>
-                                    <th>Section</th>                                   
+                                    <th>Section</th>  
+                                    <th>Title</th>                                  
                                     <th>Message Text</th>
                                     <th style="display:none;">UserId</th>
 
@@ -67,6 +68,7 @@
                                             <td>@(rowNo += 1)</td>
                                             <td>@item.ClassName</td>
                                             <td>@item.SectionName</td>
+                                            <td>@item.Title</td>
                                             <td>@item.MassageText</td>
                                             @*<td>@item.SectionName</td>*@
                                             @*<td style="display:none;">@item.sc</td>*@
