--- a/DigiChamps/Views/School/GetStudyMaterialList.cshtml
+++ b/DigiChamps/Views/School/GetStudyMaterialList.cshtml
@@ -51,6 +51,7 @@
                                     <th>S No.</th>
                                     <th>ClassName </th>
                                     <th>SubjectName</th>
+                                    <th>Title</th>
                                     <th>Topic</th>
                                     <th>File Name</th>
                                     <th>File Type</th>
@@ -71,6 +72,7 @@
                                             <td>@(rowNo += 1)</td>
                                             <td>@item.ClassName</td>
                                             <td>@item.SubjectName</td>
+                                            <td>@item.Title</td>
                                             <td>@item.Material</td>
                                             <td>@item.FileName</td>
                                             <td>@item.FileType</td>
