--- a/DigiChamps/Views/School/AddSchoolPrincipal.cshtml
+++ b/DigiChamps/Views/School/AddSchoolPrincipal.cshtml
@@ -3,7 +3,7 @@
 @model DigiChamps.Models.SchoolModel.SchoolAdminOrPrincipleModel
 
 @{
-    ViewBag.Title = "School Principle Profile";
+    ViewBag.Title = "School Principal Profile";
     Layout = "~/Views/Shared/_SchoolLayout.cshtml";
 }
 @using (Html.BeginForm("AddSchoolPrincipal", "School", FormMethod.Post, new { @class = "form-horizontal", id = "validation-form", enctype = "multipart/form-data" }))
@@ -13,7 +13,7 @@
         <div class="col-md-12">
             <div class="box">
                 <div class="box-title">
-                    <h3><i class="fa fa-file"></i> Principle Profile</h3>
+                    <h3><i class="fa fa-file"></i> Principal Profile</h3>
 
                 </div>
                 <div class="box-content">
