--- a/DigiChamps/Views/School/GetSchoolPrincipleList.cshtml
+++ b/DigiChamps/Views/School/GetSchoolPrincipleList.cshtml
@@ -26,7 +26,7 @@
         <div class="col-md-12">
             <div class="box">
                 <div class="box-title">
-                    <h3><i class="fa fa-file"></i> School Principle List </h3>
+                    <h3><i class="fa fa-file"></i> School Principal List </h3>
                     <div class="box-tool box-tooll">
                         <a class="btn btn-primary" href="/School/AddSchoolPrincipal/"><i class="fa fa-plus"></i><span> Add School Principle</span></a>
                     </div>
